Info: Working, Starting Stage 6 - Setting Context Parameters. Note: There is an error in the tutorial under "Creating a Resource Reference to the Data Source", point 3. The resource type in screen shot is incorrect. Correct is Resource Type: javax.sql.ConnectionPoolDataSource. If you don't use it, then you get the exception - WARNING: StandardWrapperValve[jsp]: Servlet.service() for servlet jsp threw exception org.apache.derby.client.am.SqlException: Table/View 'CATEGORY' does not exist.

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -11,7 +11,7 @@
     </jsp-config>
     <resource-ref>
         <res-ref-name>jdbc/affablebean</res-ref-name>
-        <res-type>javax.sql.DataSource</res-type>
+        <res-type>javax.sql.ConnectionPoolDataSource</res-type>
         <res-auth>Container</res-auth>
         <res-sharing-scope>Shareable</res-sharing-scope>
     </resource-ref>
